--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Счетчик отметок</title>
   <style>
-
     body {
       font-family: "Inter", "Segoe UI", Roboto, sans-serif;
       margin: 0;
@@ -88,6 +87,7 @@
 <body>
   <div class="container">
     <h1>Счетчик отметок</h1>
+
     <div class="counter">
       <div class="person">
         <div class="name">Роман → Сергей</div>
@@ -98,6 +98,19 @@
         <div class="value" id="sergeyToRoman">0</div>
       </div>
     </div>
+
+    <!-- Новые плашки -->
+    <div class="counter">
+      <div class="person">
+        <div class="name">Роман сделал на благо бетменов</div>
+        <div class="value" id="romanBatman">0</div>
+      </div>
+      <div class="person">
+        <div class="name">Сергей сделал на благо бетменов</div>
+        <div class="value" id="sergeyBatman">0</div>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
